--- a/event-bus/package.json
+++ b/event-bus/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.20.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   }
 }
