Updated ports and URLs in client

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
-REACT_APP_URL=http://localhost:
-REACT_APP_POST_SERVICE=4000/posts
-REACT_APP_COMMENT_SERVICE=5000/posts
+REACT_APP_HOSTNAME=http://localhost
+REACT_APP_POST_SERVICE=4000
+REACT_APP_COMMENT_SERVICE=5000
+REACT_APP_QUERY_SERVICE=8000
