--- a/comment-service/package.json
+++ b/comment-service/package.json
@@ -4,7 +4,8 @@
   "description": "A microservice to handle user comments",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "author": "Gagandeep Singh",
   "license": "MIT",
