--- a/query-service/package.json
+++ b/query-service/package.json
@@ -4,7 +4,8 @@
   "description": "Stores all posts and comments associated to the post in memory",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "author": "Gagandeep Singh",
   "license": "MIT",
