--- a/.github/workflows/deploy-posts-service.yml
+++ b/.github/workflows/deploy-posts-service.yml
@@ -6,6 +6,10 @@ on:
       - master
     paths:
       - 'posts-service/**'
+defaults:
+  run:
+    working-directory: posts-service
+
 
 jobs:
   build:
@@ -30,8 +34,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile
+          context: posts-service
+          file: posts-service/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/386
           push: true
           tags: |
