--- a/.github/workflows/deploy-posts-service.yml
+++ b/.github/workflows/deploy-posts-service.yml
@@ -16,6 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
       - name: Set env
         run: echo "NOW=v$(date +'%Y%m%d.%H%M%S')" >> $GITHUB_ENV
         # Required for Build and push step
