--- a/infra/k8s/event-bus-depl.yml
+++ b/infra/k8s/event-bus-depl.yml
@@ -1,21 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: posts-depl
+  name: event-bus-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: posts
-  # Actual pod description
+      app: event-bus
   template:
     metadata:
       labels:
-        app: posts
+        app: event-bus
     spec:
       containers:
-        - name: posts
-          image: gagandeep39/blog-posts-service
+        - name: event-bus
+          image: gagandeep39/blog-event-bus
           resources:
             limits:
               memory: '128Mi'
@@ -25,12 +24,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: event-bus-serv
 spec:
   selector:
-    app: posts
+    app: event-bus
   ports:
-    - port: 4000
-      targetPort: 4000
-      name: posts-clusterip-port
+    - port: 7000
+      targetPort: 7000
+      name: event-bus-port
       protocol: TCP
