k8s - Added env for event bus service

--- a/infra/k8s/event-bus-depl.yml
+++ b/infra/k8s/event-bus-depl.yml
@@ -19,6 +19,9 @@ spec:
             limits:
               memory: '128Mi'
               cpu: '500m'
+          env:
+            - name: POSTS_SERVICE
+              value: posts-clusterip-srv
 
 ---
 apiVersion: v1
