Protocol removed from env (hardcoded)

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_HOSTNAME=http://localhost
+REACT_APP_HOSTNAME=localhost
 REACT_APP_POST_SERVICE=4000
 REACT_APP_COMMENT_SERVICE=5000
 REACT_APP_QUERY_SERVICE=8000
