--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,11 @@
-FROM node:alpine
+FROM node:alpine as build
 LABEL mantainer="singh.gagandeep3911@gmail.com"
 WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
-CMD [ "npm", "start" ]
+RUN npm run build
+
+# Stage 2
+FROM nginx:alpine
+COPY --from=build /app/build /usr/share/nginx/html
